crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__has_segment.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "uri",
      "type": "attr"
    },
    "op": "path_match",
    "raw": "has_segment(\"module\", \"domain\")",
    "rhs": {
      "pattern": "**/module:domain/**",
      "type": "path_pattern"
    },
    "type": "atom"
  }
}
