crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__invalid_moniker_descendant.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `moniker <@ not-a-uri`: invalid moniker URI `not-a-uri`: URI does not start with the expected scheme `code+moniker://`",
  "input": "moniker <@ not-a-uri"
}
