crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__lines_le.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "name": "lines",
        "type": "projection"
      },
      "type": "number"
    },
    "op": "le",
    "raw": "lines <= 60",
    "rhs": {
      "expr": {
        "type": "literal",
        "value": 60.0
      },
      "type": "number"
    },
    "type": "atom"
  }
}
