crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__metric_aggregate.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "domain": {
          "kind": "method",
          "type": "children"
        },
        "expr": {
          "binding": "each",
          "kind": "fan_out",
          "type": "metric"
        },
        "kind": "cv",
        "percentile": null,
        "type": "aggregate"
      },
      "type": "number"
    },
    "op": "le",
    "raw": "cv(method, fan_out(each)) <= 0.6",
    "rhs": {
      "expr": {
        "type": "literal",
        "value": 0.6
      },
      "type": "number"
    },
    "type": "atom"
  }
}
